# ISBI2017

Architecture/: CMakeLists.txt
Architecture/CAD/: AverageFROCCurves.cpp  AverageROCCurves.cpp  CMakeLists.txt  CodeBookTool.cpp  CodeBookTree.h  CodeBookTree.hpp  Detect.cpp  EvalGleasonFROC.cpp  EvalProstateCAD.cpp  MeanShift.h  MeanShift.hpp  MedicalImages2HED.cpp  MedicalImages2HED.h  Morphology.h  Morphology.hpp  ParameterContainer.h  ParameterFile.h  PiecewiseLinearInterpolation.h  ProstateCAD.cpp  ProstateCAD.h  ROCCurve.cpp  ROCCurve.h  VoiFileIO.cpp  VoiFileIO.h  VoiToMask.h  bsdgetopt.h
Architecture/examples/: CMakeLists.txt
Architecture/examples/CAD/: CMakeLists.old.txt  Common.cpp  Common.h  MedicalImages2HED.cpp  MedicalImages2HED.h  ParameterMap.h  RunHED.cpp  VoiToMask.hpp
Architecture/examples/hed/: CMakeLists.txt~
Architecture/examples/hed/.ipynb_checkpoints/: HED-tutorial-checkpoint.ipynb
